--- a/codeWork/index.html
+++ b/codeWork/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/mainStyle.css" /> </head>
-    <script src="js/home.js" type="text/javascript"/></script>
+    <link rel="stylesheet" type="text/css" href="css/mainStyle.css" /> 
+    <script src="js/home.js" type="text/javascript"></script>
+    </head>
 <body>
     <div id="mainCont" class="clearfix">
         <div id="splitHolder">
