--- a/codeWork/index.html
+++ b/codeWork/index.html
@@ -9,7 +9,7 @@
     <div id="mainCont" class="clearfix">
         <div id="splitHolder">
             <div id="leftNav">
-                <div id="navHolder"> <img src="http://lorempixel.com"> <img src="http://lorempixel.com"> <img src="http://lorempixel.com"> <img src="http://lorempixel.com"> <img src="http://lorempixel.com"> </div>
+                <div id="navHolder"> <img src="http://lorempixel.com/50/50/"> <img src="http://lorempixel.com/50/50/"> <img src="http://lorempixel.com/50/50/"> <img src="http://lorempixel.com/50/50/"> <img src="http://lorempixel.com/50/50/"> </div>
             </div>
             <div id="mainCont">
                 <div id="copyHolder">
